--- a/source/less/blocks/forms.less
+++ b/source/less/blocks/forms.less
@@ -1,5 +1,10 @@
+.forms {
+  margin-bottom: 53px;
+}
+
 .forms__wrapper {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
+  font-family: @basic-font;
 }
