--- a/source/less/blocks/intro.less
+++ b/source/less/blocks/intro.less
@@ -15,6 +15,22 @@
     position: absolute;
     top: 90px;
     left: 19px;
+
+    @media (min-width: @tablet-width) {
+      position: absolute;
+      top: 77px;
+      left: 154px;
+      width: 461px;
+      height: 350px;
+    }
+
+    @media (min-width: @desktop-width) {
+      position: absolute;
+      top: 79px;
+      left: 370px;
+      width: 460px;
+      height: 350px;
+    }
   }
 
   &::after {
