--- a/source/less/blocks/person-form.less
+++ b/source/less/blocks/person-form.less
@@ -1,17 +1,46 @@
 .person-form {
   display: flex;
+  position: relative;
   flex-direction: column;
   width: 100%;
   padding: 0 20px;
+  margin-top: 38px;
 
   label {
     display: flex;
     flex-direction: row;
-    margin-top: 10px;
+    margin-top: 20px;
+
+    @media (min-width: @desktop-width) {
+      padding-right: 120px;
+    }
   }
 
   @media (min-width: @tablet-width) {
     width: 50%;
+    margin: 0;
+    padding: 0;
+    border-left: 1px solid #e6e6e6;
+    box-sizing: border-box;
+    border: none;
+  }
+
+  &::after {
+    content: "";
+    display: block;
+    position: absolute;
+    width: 320px;
+    height: 1px;
+    top: -20px;
+    left: 0px;
+    background-color: #e5e5e5;
+
+    @media (min-width: @tablet-width) {
+      width: 1px;
+      height: 292px;
+      top: 32px;
+      left: -1px;
+    }
   }
 }
 
@@ -22,13 +51,26 @@
   font-size: 18px;
   line-height: 26px;
   color: @black;
+
+  @media (min-width: @tablet-width) {
+    font-size: 21px;
+    margin-top: 29px;
+    margin-left: -109px;
+    margin-bottom: 36px;
+  }
+
+  @media (min-width: @desktop-width) {
+    margin-top: 26px;
+    margin-left: -280px;
+  }
 }
 
 .person-form__field {
+  font-family: @basic-font;
   display: flex;
   width: 100%;
   min-height: 58px;
-  padding-left: 22px;
+  padding-left: 20px;
   padding-right: 22px;
   background-color: #f2f2f2;
   border: none;
@@ -37,14 +79,26 @@
   line-height: 26px;
   color: #000000;
   box-sizing: border-box;
+
+  @media (min-width: @tablet-width) {
+    padding-top: 7px;
+  }
 }
 
 .person-form__subitem {
   display: flex;
   align-items: center;
-  padding-right: 20px;
+  padding-right: 15px;
   margin: 0;
   font-size: 14px;
   line-height: 26px;
   color: #333333;
+
+  @media (min-width: @tablet-width) {
+    margin-left: 58px;
+  }
+
+  @media (min-width: @desktop-width) {
+    margin-left: 79px;
+  }
 }
