--- a/source/less/style.less
+++ b/source/less/style.less
@@ -25,3 +25,4 @@
 @import "source/less/blocks/emotions-form.less";
 @import "source/less/blocks/button.less";
 @import "source/less/blocks/reason-subitems.less";
+@import "source/less/blocks/modal.less";
