--- a/source/less/blocks/attractions-form.less
+++ b/source/less/blocks/attractions-form.less
@@ -1,51 +1,224 @@
 .attractions-form {
   display: flex;
   flex-direction: column;
+  position: relative;
+  flex-wrap: wrap;
   width: 100%;
+  margin-top: 59px;
 
   label {
     display: flex;
     flex-direction: row;
-    padding-right: 5px;
-    margin-top: 10px;
     font-weight: bold;
     font-size: 18px;
     line-height: 26px;
-    color: @black;
+    color: #000000;
     text-transform: none;
+
+    @media (min-width: @desktop-width) {
+      width: auto;
+    }
+
+    &:first-child {
+      @media (min-width: @desktop-width) {
+        margin-left: 164px;
+      }
+    }
+
+    &:last-child {
+      @media (min-width: @desktop-width) {
+        margin-right: 124px;
+      }
+    }
   }
 
   @media (min-width: @tablet-width) {
     margin: 0 auto;
+    margin-top: 52px;
+  }
+
+  @media (min-width: @desktop-width) {
+    margin: 0 auto;
+    margin-top: 51px;
+  }
+
+  &::after {
+    content: "";
+    display: block;
+    position: absolute;
+    width: 320px;
+    height: 1px;
+    top: -20px;
+    left: 0px;
+    background-color: #e5e5e5;
+
+    @media (min-width: @tablet-width) {
+      width: 648px;
+      height: 1px;
+      left: 60px;
+      top: 26px;
+    }
+
+    @media (min-width: @desktop-width) {
+      width: 960px;
+      left: 120px;
+      top: 26px;
+    }
   }
 }
 
 .attractions-form__title {
   text-align: center;
   width: 268px;
-  margin: 0 auto;
+  margin: 0;
+  margin-left: 25px;
   font-weight: bold;
   font-size: 18px;
   line-height: 26px;
-  color: @black;
+  color: #000000;
+  
+  @media (min-width: @tablet-width) {
+    font-size: 21px;
+    width: 402px;
+    margin: 0 auto;
+    background-color: @white;
+    z-index: 1;
+  }
+}
+
+.attractions-form__text {
+  margin-left: -20px;
+  margin-top: 8px;
+  
+  &--montain {
+    @media (min-width: @tablet-width) {
+      margin-right: 9px;
+    }
+  }
+  
+  &--bridge {
+    @media (min-width: @tablet-width) {
+      left: -44px;
+    }
+  }
+
+  &--park {
+    @media (min-width: @tablet-width) {
+      margin-top: 16px;
+    }
+  }
+
+  &--rocks {
+    @media (min-width: @tablet-width) {
+      margin-right: -4px;
+      margin-top: 16px;
+    }
+  }
 }
 
 .attractions-form__checkbox {
-  margin-right: 20px;
+  display: none;
 }
 
 .attractions-form__choise-wrapper {
   display: flex;
-  flex-direction: row;
-  justify-content: space-between;
+  flex-direction: column;
   flex-wrap: wrap;
+  padding-left: 62px;
+  padding-top: 26px;
 
   @media (min-width: @tablet-width) {
-    padding-left: 160px;
-    padding-right: 130px;
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    justify-content: space-between;
+    width: 54%;
+    margin: 0;
+    margin-left: 197px;
+    padding-left: 0;
+    padding-right: 0;
+    padding-top: 51px;
   }
 
   @media (min-width: @desktop-width) {
-    margin: 0 auto;
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    justify-content: space-between;
+    width: 100%;
+    margin: 0;
+    padding-left: 0;
+    padding-right: 0;
+    padding-top: 51px;
   }
 }
+
+.attractions-form__radio {
+  display: inline-block;
+  position: relative;
+  top: -8px;
+  left: -44px;
+  margin-bottom: 23px;
+  width: 57px;
+  height: 57px;
+  border: none;
+  border-radius: 5px;
+  vertical-align: middle;
+  background-color: #f2f2f2;
+  cursor: pointer;
+
+  &--montain {
+    @media (min-width: @tablet-width) {
+      left: -44px;
+    }
+  }
+  
+  &--bridge {
+    @media (min-width: @tablet-width) {
+      left: -44px;
+    }
+  }
+
+  &--park {
+    @media (min-width: @tablet-width) {
+      top: 0;
+    }
+  }
+
+  &--rocks {
+    @media (min-width: @tablet-width) {
+      top: 0px;
+      left: -45px;
+    }
+  }
+
+  &:checked {  
+    & ~ .attractions-form__radio::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    width: 23px;
+    height: 16px;
+    margin: 0 auto;
+    background-image: url("../img/tick.svg.svg");
+    background-repeat: no-repeat;
+  }
+}
+}
+
+// .attractions-form__radio:checked~.attractions-form__radio::before {
+//   content: "";
+//   position: absolute;
+//   top: 0;
+//   bottom: 0;
+//   left: 0;
+//   right: 0;
+//   width: 23px;
+//   height: 16px;
+//   margin: 0 auto;
+//   background-image: url("../img/tick.svg.svg");
+//   background-repeat: no-repeat;
+// }
