--- a/source/less/blocks/button.less
+++ b/source/less/blocks/button.less
@@ -1,9 +1,10 @@
 .button {
+  font-family: @basic-font;
   display: block;
   margin: 0 auto;
   width: 280px;
   height: 58px;
-  padding: 14px 32px 17px 32px;
+  padding: 15px 32px 17px 32px;
   font-weight: bold;
   font-size: 21px;
   line-height: 26px;
@@ -12,6 +13,7 @@
   background-color: @blue;
   box-sizing: border-box;
   border: none;
+  text-transform: uppercase;
 
   @media (min-width: @tablet-width) {
     width: 458px;
