--- a/source/less/blocks/opinion-form.less
+++ b/source/less/blocks/opinion-form.less
@@ -1,18 +1,43 @@
 .opinion-form {
   display: flex;
   flex-direction: column;
+  position: relative;
   width: 100%;
+  margin-top: 48px;
 
   label {
     display: flex;
     flex-direction: row;
     padding-right: 5px;
     margin-top: 10px;
+
+    @media (min-width: @tablet-width) {
+      padding-right: 0;
+      margin-top: 0;
+    }
   }
 
   @media (min-width: @tablet-width) {
-    width: 50%;
     order: -1;
+    width: 50%;
+    margin: 0;
+    padding: 0;
+    border: none;
+  }
+
+  &::after {
+    content: "";
+    display: block;
+    position: absolute;
+    width: 320px;
+    height: 1px;
+    top: -20px;
+    left: 0px;
+    background-color: #e5e5e5;
+
+    @media (min-width: @tablet-width) {
+      display: none;
+    }
   }
 }
 
@@ -23,6 +48,18 @@
   font-size: 18px;
   line-height: 26px;
   color: @black;
+
+  @media (min-width: @tablet-width) {
+    font-size: 21px;
+    margin-top: 29px;
+    margin-left: 7px;
+    margin-bottom: 73px;
+  }
+
+  @media (min-width: @desktop-width) {
+    margin-top: 26px;
+    margin-left: 70px;
+  }
 }
 
 .opinion-form__text {
@@ -31,8 +68,61 @@
   font-size: 18px;
   line-height: 26px;
   text-transform: none;
+  margin-left: 41px;
+  margin-top: 30px;
+
+  @media (min-width: @tablet-width) {
+    margin: 0;
+    font-weight: bold;
+    font-size: 18px;
+    line-height: 26px;
+    text-transform: none;
+    margin-left: 78px;
+  }
+
+  @media (min-width: @desktop-width) {
+    margin-left: 142px;
+  }
 }
 
 .opinion-form__checkbox {
-  margin-right: 20px;
+  display: none;
+}
+
+.opinion-form__radio {
+  display: inline-block;
+  position: relative;
+  top: 14px;
+  left: 19px;
+  width: 57px;
+  height: 57px;
+  border: none;
+  border-radius: 50%;
+  vertical-align: middle;
+  background-color: #f2f2f2;
+  cursor: pointer;
+
+  @media (min-width: @tablet-width) {
+    top: -16px;
+    left: 59px;
+    margin-bottom: 21px;
+  }
+
+  @media (min-width: @desktop-width) {
+    left: 123px;
+  }
+
+  .opinion-form__radio:checked + .opinion-form__radio::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    width: 18px;
+    height: 18px;
+    margin: 0 auto;
+    border-radius: 50%;
+    background-color: @black;
+  }
 }
