--- a/source/less/blocks/site-list.less
+++ b/source/less/blocks/site-list.less
@@ -1,6 +1,122 @@
+.site-list {
+  padding: 0;
+  list-style: none;
+  background-color: @blue;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+
+  a {
+    text-decoration: none;
+  }
+
+  @media (min-width: @tablet-width) {
+    background-color: @white;
+    min-width: 723px;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-between;
+  }
+
+  @media (min-width: @desktop-width) {
+    width: @desktop-width;
+  }
+}
+
 .site-list__item {
+  width: 100%;
+  box-sizing: border-box;
+
+  @media (min-width: @tablet-width) {
+    width: 20%;
+
+    &:nth-child(2) {
+      margin-right: auto;
+    }
+  }
+}
+
+.site-list__link {
+  font-size: 18px;
+  line-height: 40px;
   font-weight: bold;
-  font-size: 14px;
-  line-height: 26px;
-  color: @black;
+  color: @white;
+  text-transform: uppercase;
+  text-align: center;
+  width: 100%;
+  height: 100%;
+  display: block;
+  box-sizing: border-box;
+  padding-top: 9px;
+  padding-bottom: 5px;
+
+  @media (min-width: @tablet-width) {
+    font-size: 14px;
+    line-height: 26px;
+    font-weight: bold;
+    color: @black;
+    padding-top: 16px;
+  }
+
+  &:hover,
+  &:focus {
+    background-color: #669ec0;
+
+    @media (min-width: @tablet-width) {
+      background-color: @white;
+      color: @blue;
+    }
+  }
+
+  &:active {
+    background-color: #5496bd;;
+
+    @media (min-width: @tablet-width) {
+      background-color: @white;
+      color: rgba(0,0,0, 0.3);
+    }
+  }
+}
+
+.site-list__link--active {
+  @media (min-width: @tablet-width) {
+    color: #766357;
+  }
+
+  &:hover,
+  &:focus {
+    @media (min-width: @tablet-width) {
+      color: #604e43;
+    }
+  }
+
+  &:active {
+    @media (min-width: @tablet-width) {
+      color: rgba(#766357, 0.3);
+    }
+  }
+}
+
+@media (max-width: @mobile-width-only) {
+  .site-list__item:not(:first-child) .site-list__link {
+    border-top: 1px solid rgba(255,255,255, 0.2);
+  }
+
+  .site-list__item:not(:last-child) .site-list__link {
+    border-bottom: 1px solid #678fa8;
+  }
+
+  .site-list__item:last-child {
+    position: relative;
+  }
+
+  .site-list__item:last-child::after {
+    content: "";
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 7px;
+    background: linear-gradient(180deg, rgba(0,0,0, 0) 0%, rgba(0,0,0, 0.2) 100%);
+  }
 }
